const grpc = require('@grpc/grpc-js');
const protoLoader = require('@grpc/proto-loader');
const config = require('../config/indexing-config');
const { ethers } = require('ethers');
const fs = require('fs');
const path = require('path');
const {
  INDEX_SCHEMA,
  INDEX_KEY_SIZE,
  resolveNetworkKey,
  buildIndexId,
  buildIndexFilePath,
} = require('./indexing-constants');

/**
 * Blockchain Indexing gRPC Client
 * gRPCë¥¼ í†µí•´ idxmngr ì„œë²„ì™€ í†µì‹ í•˜ëŠ” í´ë¼ì´ì–¸íŠ¸
 * ì´ë”ë¦¬ì›€ ë¸”ë¡ì²´ì¸ í†µì‹  ê¸°ëŠ¥ë„ í¬í•¨
 * 
 * @class IndexingClient
 */
class IndexingClient {
  /**
   * @param {Object} options - í´ë¼ì´ì–¸íŠ¸ ì˜µì…˜
   * @param {string} options.serverAddr - gRPC ì„œë²„ ì£¼ì†Œ
   * @param {string} options.protoPath - Protobuf íŒŒì¼ ê²½ë¡œ
   * @param {Object} options.grpcOptions - gRPC ì˜µì…˜
   */
  constructor(options = {}) {
    this.config = { ...config, ...options };
    this.client = null;
    this.proto = null;
    this.isConnected = false;
    
    // ğŸš€ ì„±ëŠ¥ ëª¨ë‹ˆí„°ë§ ì„¤ì •
    this.batchSize = options.batchSize || 10;
    this.adaptiveBatch = options.adaptiveBatch || false;
    this.performanceHistory = []; // ì„±ëŠ¥ ê¸°ë¡
    this.maxBatchSize = options.maxBatchSize || 50;
    this.minBatchSize = options.minBatchSize || 5;
    
    // ì´ë”ë¦¬ì›€ ë¸”ë¡ì²´ì¸ ì„¤ì •
    this.ethProvider = null;
    this.ethContracts = {};
    this.networkConfigs = {
      'hardhat-local': 'http://localhost:8545',
      'hardhat': 'http://localhost:8545',
      'kaia': 'https://public-en-kairos.node.kaia.io',
      'monad': 'https://testnet-rpc.monad.xyz',
      'fabric': process.env.FABRIC_RPC_URL || 'http://localhost:7051'
    };
    
    // ìë™ ì—°ê²° ì œê±° - ëª…ì‹œì ìœ¼ë¡œ connect() í˜¸ì¶œí•´ì•¼ í•¨
  }

  /**
   * ë„¤íŠ¸ì›Œí¬ ì…ë ¥ ê²€ì¦
   * @param {string} network
   * @returns {string}
   * @private
   */
  ensureNetwork(network) {
    const normalized = resolveNetworkKey(network);
    if (!normalized) {
      throw new Error('Network parameter is required');
    }
    return normalized;
  }

  /**
   * í˜„ì¬ ì„±ëŠ¥ í†µê³„ ì¡°íšŒ
   */
  getPerformanceStats() {
    if (this.performanceHistory.length === 0) {
      return { message: 'ì„±ëŠ¥ ë°ì´í„° ì—†ìŒ' };
    }

    const recent = this.performanceHistory.slice(-5);
    const avgThroughput = recent.reduce((sum, p) => sum + p.throughput, 0) / recent.length;
    const avgProcessingTime = recent.reduce((sum, p) => sum + p.processingTime, 0) / recent.length;

    return {
      currentBatchSize: this.batchSize,
      adaptiveBatch: this.adaptiveBatch,
      avgThroughput: Math.round(avgThroughput * 100) / 100,
      avgProcessingTime: Math.round(avgProcessingTime),
      recentHistory: recent.map(p => ({
        batchSize: p.batchSize,
        throughput: Math.round(p.throughput * 100) / 100,
        processingTime: p.processingTime
      }))
    };
  }

  /**
   * gRPC ì„œë²„ì— ì—°ê²°
   * @private
   */
  async connect() {
    try {
      console.log('ğŸ” Protobuf íŒŒì¼ ë¡œë“œ ì‹œë„:', this.config.protoPath);
      const packageDefinition = protoLoader.loadSync(this.config.protoPath, {
        keepCase: this.config.grpcOptions.keepCase,
        longs: String,
        enums: String,
        defaults: true,
        oneofs: true,
      });
      console.log('âœ… Protobuf íŒŒì¼ ë¡œë“œ ì„±ê³µ');

      this.proto = grpc.loadPackageDefinition(packageDefinition);
        
      // ğŸ”§ ìˆ˜ì •: ì˜¬ë°”ë¥¸ íŒ¨í‚¤ì§€ì™€ ì„œë¹„ìŠ¤ ì´ë¦„ ì‚¬ìš©
      this.client = new this.proto.idxmngrapi.Index_manager(
        this.config.serverAddr,
        grpc.credentials.createInsecure(),
        this.config.grpcOptions || {}
      );

      this.isConnected = true;
      console.log('âœ… gRPC ì„œë²„ ì—°ê²° ì„±ê³µ');
    } catch (error) {
      console.error('âŒ gRPC ì„œë²„ ì—°ê²° ì‹¤íŒ¨:', error.message);
      throw error;
    }
  }

  /**
   * gRPC ì—°ê²° ì¢…ë£Œ
   */
  async close() {
    if (this.client) {
      this.client.close();
      this.isConnected = false;
      console.log('ğŸ”Œ gRPC ì—°ê²° ì¢…ë£Œ');
    }
  }

  /**
   * ë°ì´í„° ê²€ìƒ‰
   * @param {Object} searchParams - ê²€ìƒ‰ ë§¤ê°œë³€ìˆ˜
   * @returns {Promise<Object>} ê²€ìƒ‰ ê²°ê³¼
   */
  async searchData(searchParams) {
    return new Promise((resolve, reject) => {
      if (!this.isConnected) {
        reject(new Error('gRPC ì„œë²„ì— ì—°ê²°ë˜ì§€ ì•ŠìŒ'));
        return;
      }

      // ğŸ”§ ìˆ˜ì •: ì˜¬ë°”ë¥¸ ë©”ì†Œë“œ ì´ë¦„ ì‚¬ìš©
      this.client.GetindexDataByFieldM(searchParams, (error, response) => {
        if (error) {
          console.error('âŒ ë°ì´í„° ê²€ìƒ‰ ì‹¤íŒ¨:', error.message);
          reject(error);
        } else {
          resolve(response);
        }
      });
    });
  }

  /**
   * ìƒì„±ëœ ì¸ë±ìŠ¤ ëª©ë¡ ì¡°íšŒ
   * @param {string} [requestMsg] - ì„œë²„ ë¡œê·¸ ë“±ì— ë‚¨ê¸¸ ìš”ì²­ ë©”ì‹œì§€
   * @returns {Promise<Object>} ì¸ë±ìŠ¤ ëª©ë¡ ê²°ê³¼
   */
  async getIndexList(requestMsg = 'list-all-indexes') {
    if (!this.isConnected) {
      throw new Error('Client is not connected to server');
    }

    const payload = {
      RequestMsg: requestMsg,
    };

    return new Promise((resolve, reject) => {
      this.client.GetIndexList(payload, (error, response) => {
        if (error) {
          console.error(`âŒ GetIndexList failed: ${error.message}`);
          reject(error);
        } else {
          resolve(response);
        }
      });
    });
  }

  /**
   * ì¸ë±ìŠ¤ ìƒì„±
   * @param {Object} indexInfo - ì¸ë±ìŠ¤ ì •ë³´
   * @param {number} [indexInfo.FromBlock] - ì¸ë±ì‹±ì„ ì‹œì‘í•  ìµœì´ˆ ë¸”ë¡(ë¯¸ì§€ì • ì‹œ BlockNum ë˜ëŠ” 0)
   * @returns {Promise<Object>} ìƒì„± ê²°ê³¼
   */
  async createIndex(indexInfo) {
    if (!this.isConnected) {
      throw new Error('Client is not connected to server');
    }

    const networkKey = resolveNetworkKey(indexInfo.Network || indexInfo.network);

    const payload = {
      ...indexInfo,
    };

    payload.IndexID = indexInfo.IndexID || indexInfo.indexId || buildIndexId(networkKey);
    payload.IndexName = indexInfo.IndexName || indexInfo.indexName || payload.IndexID;
    payload.Schema = indexInfo.Schema || indexInfo.schema || INDEX_SCHEMA;
    payload.FilePath = indexInfo.FilePath || indexInfo.filePath || buildIndexFilePath(networkKey);
    payload.Network = networkKey;
    payload.KeySize = Number(indexInfo.KeySize || indexInfo.keySize || INDEX_KEY_SIZE);

    if (!payload.IndexingKey) {
      payload.IndexingKey = indexInfo.IndexingKey ?? indexInfo.indexingKey ?? payload.IndexName ?? payload.IndexID;
    }

    // ê¸°ë³¸ ì‹œì‘ ë¸”ë¡ì´ ëª…ì‹œë˜ì§€ ì•Šì•˜ë‹¤ë©´ BlockNum í˜¹ì€ 0ìœ¼ë¡œ ì´ˆê¸°í™”í•œë‹¤
    if (payload.FromBlock === undefined || payload.FromBlock === null) {
      payload.FromBlock = typeof payload.BlockNum === 'number' ? payload.BlockNum : 0;
    }

    payload.FromBlock = Number(payload.FromBlock);

    return new Promise((resolve, reject) => {
      try {
        this.client.CreateIndexRequest(payload, (error, response) => {
          if (error) {
            console.error(`âŒ CreateIndex failed: ${error.message}`);
            reject(error);
          } else {
            console.log(`âœ… Index created: ${response.ResponseCode} - ${response.ResponseMessage}`);
            resolve(response);
          }
        });
        
      } catch (error) {
        console.error(`âŒ CreateIndex request failed: ${error.message}`);
        reject(error);
      }
    });
  }

  /**
   * ì¸ë±ìŠ¤ì— ë°ì´í„° ì‚½ì…
   * @param {Object} indexData - ì‚½ì…í•  ì¸ë±ìŠ¤ ë°ì´í„°
   * @returns {Promise<Object>} ì‚½ì… ê²°ê³¼
   */
  async insertData(indexData) {
    if (!this.isConnected) {
      console.log('ğŸ”— gRPC ì„œë²„ì— ì—°ê²° ì¤‘...');
      await this.connect();
    }

    return new Promise((resolve, reject) => {
      try {
        const networkKey = resolveNetworkKey(indexData.Network || indexData.network);
        const normalizedIndexId = indexData.IndexID || indexData.indexId || buildIndexId(networkKey);
        const normalizedFilePath = indexData.FilePath || indexData.filePath || buildIndexFilePath(networkKey);
        const keySize = Number(indexData.KeySize || indexData.keySize || INDEX_KEY_SIZE);

        // ColIndexëŠ” indexingKeyë¥¼ ì‚¬ìš©í•´ì•¼ í•¨ (ì˜ˆ: "purpose")
        const colIndex = indexData.ColIndex || indexData.IndexName || indexData.indexingKey || 'purpose';
        
        const payload = {
          ...indexData,
          IndexID: normalizedIndexId,
          ColIndex: colIndex,
          FilePath: normalizedFilePath,
          Network: networkKey,
          KeySize: keySize,
        };
        
        console.log(`ğŸ“¤ InsertData - ColIndex: ${colIndex}, IndexID: ${normalizedIndexId}`);

        const stream = this.client.InsertIndexRequest((error, response) => {
          if (error) {
            console.error(`InsertIndexRequest failed: ${error.message}`);
            reject(error);
          } else {
            console.log(`âœ… Insert response received: ${JSON.stringify(response)}`);
            resolve(response);
          }
        });

        // ë°ì´í„° ì „ì†¡ ì „ ë¡œê·¸ ì¶”ê°€
        console.log('ğŸ” ì „ì†¡í•  payload:', JSON.stringify(payload, null, 2));
        console.log('ğŸ” BcList ê¸¸ì´:', payload.BcList ? payload.BcList.length : 'undefined');
        if (payload.BcList && payload.BcList.length > 0) {
          // fileindex-goë¡œ ì „ë‹¬ë˜ëŠ” íŠ¸ëœì­ì…˜ í•´ì‹œ ì¶œë ¥
          const txIds = payload.BcList.map(bc => bc.TxId || bc.IndexableData?.TxId || 'unknown').filter(Boolean);
          console.log(`ğŸ“ fileindex-goë¡œ ì „ë‹¬ë˜ëŠ” íŠ¸ëœì­ì…˜ í•´ì‹œ: ${txIds.join(', ')}`);
          console.log('ğŸ” BcList[0]:', JSON.stringify(payload.BcList[0], null, 2));
        }
        
        // ë°ì´í„° ì „ì†¡
        console.log(`ğŸ“¤ fileindex-goë¡œ ë°ì´í„° ì „ì†¡ ì‹œì‘ (gRPC)`);
        stream.write(payload);
        stream.end();
        console.log('âœ… Data sent to stream');
        
      } catch (error) {
        console.error(`Failed to create stream: ${error.message}`);
        reject(error);
      }
    });
  }

  /**
   * ì´ë”ë¦¬ì›€ ë„¤íŠ¸ì›Œí¬ ì—°ê²°
   * @param {string} network - ë„¤íŠ¸ì›Œí¬ ì´ë¦„
   * @private
   */
  async connectEthereumNetwork(network) {
    try {
      const rpcUrl = this.networkConfigs[network];
      if (!rpcUrl) {
        throw new Error(`ì§€ì›í•˜ì§€ ì•ŠëŠ” ë„¤íŠ¸ì›Œí¬: ${network}`);
      }

      this.ethProvider = new ethers.JsonRpcProvider(rpcUrl);
      
      // ì—°ê²° í…ŒìŠ¤íŠ¸
      await this.ethProvider.getBlockNumber();
      console.log(`âœ… ì´ë”ë¦¬ì›€ ë„¤íŠ¸ì›Œí¬ ì—°ê²° ì„±ê³µ: ${network}`);
      
    } catch (error) {
      console.error(`âŒ ì´ë”ë¦¬ì›€ ë„¤íŠ¸ì›Œí¬ ì—°ê²° ì‹¤íŒ¨ (${network}):`, error.message);
      throw error;
    }
  }

  /**
   * íŠ¸ëœì­ì…˜ ìƒì„¸ ì •ë³´ ì¡°íšŒ
   * @param {string} txHash - íŠ¸ëœì­ì…˜ í•´ì‹œ
   * @returns {Object} íŠ¸ëœì­ì…˜ ìƒì„¸ ì •ë³´
   * @private
   */
  async getTransactionDetails(txHash) {
    try {
      const [tx, receipt] = await Promise.all([
        this.ethProvider.getTransaction(txHash),
        this.ethProvider.getTransactionReceipt(txHash)
      ]);

      if (!tx) {
        throw new Error(`íŠ¸ëœì­ì…˜ì„ ì°¾ì„ ìˆ˜ ì—†ìŠµë‹ˆë‹¤: ${txHash}`);
      }

      const block = await this.ethProvider.getBlock(tx.blockNumber);

      return { tx, receipt, block };
    } catch (error) {
      console.error(`âŒ íŠ¸ëœì­ì…˜ ìƒì„¸ ì •ë³´ ì¡°íšŒ ì‹¤íŒ¨ (${txHash}):`, error.message);
      throw error;
    }
  }

  /**
   * íŠ¸ëœì­ì…˜ ABI ë””ì½”ë”©
   * @param {Object} tx - íŠ¸ëœì­ì…˜ ê°ì²´
   * @param {Object} receipt - íŠ¸ëœì­ì…˜ ì˜ìˆ˜ì¦
   * @param {string} abiPath - ABI íŒŒì¼ ê²½ë¡œ
   * @returns {Object} ë””ì½”ë”©ëœ ì •ë³´
   * @private
   */
  decodeTransactionABI(tx, receipt, abiPath = null) {
    try {
      const defaultAbiPath = path.join(__dirname, '../../etri-index/contract/artifacts/contracts/AccessManagement.sol/AccessManagement.json');
      const contractArtifact = JSON.parse(fs.readFileSync(abiPath || defaultAbiPath, 'utf8'));
      
      const iface = new ethers.Interface(contractArtifact.abi);
      const decodedEvents = [];

      if (receipt && receipt.logs) {
        receipt.logs.forEach((log, index) => {
          try {
            const decoded = iface.parseLog(log);
            if (decoded) {
              decodedEvents.push({
                name: decoded.name,
                parameters: decoded.args.map((arg, i) => ({
                  name: decoded.fragment.inputs[i].name,
                  type: decoded.fragment.inputs[i].type,
                  value: arg.toString()
                }))
              });
            }
          } catch (decodeError) {
            // ë””ì½”ë”©í•  ìˆ˜ ì—†ëŠ” ë¡œê·¸ëŠ” ë¬´ì‹œ
          }
        });
      }

      return {
        events: decodedEvents,
        functionCall: tx.data ? this.decodeFunctionCall(iface, tx.data) : null
      };

    } catch (error) {
      console.error('âŒ ABI ë””ì½”ë”© ì‹¤íŒ¨:', error.message);
      return { events: [], functionCall: null };
    }
  }

  /**
   * í•¨ìˆ˜ í˜¸ì¶œ ë””ì½”ë”©
   * @param {Object} iface - ì¸í„°í˜ì´ìŠ¤ ê°ì²´
   * @param {string} data - íŠ¸ëœì­ì…˜ ë°ì´í„°
   * @returns {Object} ë””ì½”ë”©ëœ í•¨ìˆ˜ í˜¸ì¶œ
   * @private
   */
  decodeFunctionCall(iface, data) {
    try {
      const decoded = iface.parseTransaction({ data });
      if (decoded) {
        return {
          name: decoded.name,
          parameters: decoded.args.map((arg, i) => ({
            name: decoded.fragment.inputs[i].name,
            type: decoded.fragment.inputs[i].type,
            value: arg.toString()
          }))
        };
      }
    } catch (error) {
      // ë””ì½”ë”© ì‹¤íŒ¨ëŠ” ë¬´ì‹œ
    }
    return null;
  }
}

module.exports = IndexingClient;

